<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bukanir</string>
    <string name="app_credits">https://bukanir.com\n</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Search</string>
    <string name="action_sync">Refresh</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_watch">Watch</string>
    <string name="action_trailer">Trailer</string>
    <string name="action_delete">Delete</string>

    <string name="poster_description">Poster</string>
    <string name="director_description">"Director: "</string>
    <string name="cast_description">"Cast: "</string>

    <string name="queued">Queued</string>
    <string name="checking">Checking…</string>
    <string name="downloading_metadata">Downloading metadata…</string>
    <string name="downloading">Downloading…</string>
    <string name="fetching_subtitles">Fetching subtitles…</string>

    <string name="favorite_added">"Added to favorites"</string>
    <string name="favorite_removed">"Removed from favorites"</string>
    <string name="favorites_empty">No favorites, touch and hold movie to add</string>

    <string name="update_available">New version available</string>
    <string name="update_download">Download new version?</string>

    <string name="network_not_available">Check your network connection</string>
    <string name="storage_not_available">External storage is not available</string>
    <string name="freespace_not_available">Not enough free space</string>

    <string name="tmdb_alt">themoviedb</string>
    <string name="tmdb_desc">This product uses the TMDb API but is not endorsed or certified by TMDb</string>

    <string name="eula_text">\nThis app downloads and seeds movies using torrents, which may not be legal in your country.\n\nBukanir is not responsible for any problems that may arise, make sure you understand how torrent protocol works before using the app.\n</string>
    <string name="eula_positive_button">Agree</string>
    <string name="eula_negative_button">Disagree</string>

    <string name="error_text_connection">Connection failed</string>

    <string-array name="categories">
        <item>Movies</item>
        <item>HD Movies</item>
        <item>Episodes</item>
        <item>HD Episodes</item>
    </string-array>

    <string-array name="categories_values">
        <item>201</item>
        <item>207</item>
        <item>205</item>
        <item>208</item>
    </string-array>

    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>

    <string name="N_A">N/A</string>
    <string name="toggle_ratio">Scale</string>
    <string name="toggle_subtitles">Toggle subtitles</string>
    <string name="sub_delay_plus">Sub delay +</string>
    <string name="sub_delay_minus">Sub delay -</string>
    <string name="sub_disabled">Subtitles disabled</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">This video can\'t be played</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="torrent_stopped">Torrent stopped</string>
    <string name="torrent_started">Torrent started</string>


    <string name="pref_header_general">General</string>

    <string name="pref_list_count_title">Movies limit</string>
    <string-array name="pref_list_count_values">
        <item>10</item>
        <item>30</item>
        <item>50</item>
        <item>70</item>
        <item>100</item>
    </string-array>

    <string name="pref_cache_days_title">Days to keep cache</string>
    <string-array name="pref_cache_days_values">
        <item>3</item>
        <item>7</item>
        <item>30</item>
        <item>365</item>
    </string-array>

    <string name="pref_header_player">Player</string>

    <string name="pref_hw_decode_title">HW decoding</string>
    <string name="pref_hw_decode_description">Use MediaCodec</string>

    <string name="pref_open_sles_title">OpenSL ES</string>
    <string name="pref_open_sles_description">Use native audio API</string>

    <string name="pref_seek_title">Enable seeking</string>
    <string name="pref_seek_description">Player startup time will be longer</string>

    <string name="pref_title_pixel_format">Pixel Format</string>
    <string-array name="pref_pixel_format_entries">
        <item>Auto Select</item>
        <item>RGB 565</item>
        <item>RGB 888X</item>
        <item>YV12</item>
    </string-array>
    <string-array name="pref_pixel_format_values">
        <item></item>
        <item>fcc-rv16</item>
        <item>fcc-rv32</item>
        <item>fcc-yv12</item>
    </string-array>

    <string name="pref_wifi_high_title">High performance WIFI</string>
    <string name="pref_wifi_high_description">Use high performance WIFI mode</string>

    <string name="pref_header_subtitles">Subtitles</string>

    <string name="pref_subtitles_title">Enable subtitles</string>
    <string name="pref_subtitles_lang">Language</string>
    <string-array name="pref_lang_entries">
        <item>Albanian</item>
        <item>Arabic</item>
        <item>Belarus</item>
        <item>Bengali</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Chinese</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kazakh</item>
        <item>Korean</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Malay</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian</item>
        <item>Sinhala</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Vietnamese</item>
    </string-array>

    <string name="pref_subtitle_size_title">Font size</string>
    <string-array name="pref_subtitle_size_entries">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>XLarge</item>
    </string-array>
    <string-array name="pref_subtitle_size_values">
        <item>14</item>
        <item>16</item>
        <item>20</item>
        <item>28</item>
    </string-array>

    <string name="pref_header_torrent">Torrents</string>

    <string name="pref_keep_files_title">Keep files</string>
    <string name="pref_keep_files_description">Keep files after exiting</string>

    <string name="pref_encryption_title">Encryption</string>
    <string name="pref_encryption_description">Enable protocol encryption (avoids ISP block)</string>

    <string name="pref_upload_rate">Maximum upload rate</string>
    <string name="pref_download_rate">Maximum download rate</string>
    <string-array name="pref_rate_entries">
        <item>Unlimited</item>
        <item>1 KB/s</item>
        <item>10 KB/s</item>
        <item>50 KB/s</item>
        <item>100 KB/s</item>
        <item>500 KB/s</item>
        <item>1000 KB/s</item>
        <item>5000 KB/s</item>
        <item>10000 KB/s</item>
    </string-array>
    <string-array name="pref_rate_values">
        <item>-1</item>
        <item>1</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>

    <string name="pref_port_title">Select the port number</string>
    <string name="pref_port_listen">Port for incoming connections</string>

    <string name="pref_tpb_host">TPB host name</string>
    <string-array name="pref_tpb_hosts">
        <item>thepiratebay.org</item>
        <item>thepiratebay.mk</item>
        <item>thepbproxy.site</item>
        <item>thepiratebay.lv</item>
        <item>proxybay.site</item>
    </string-array>

    <string name="pref_eztv_host">EZTV host name</string>
    <string-array name="pref_eztv_hosts">
        <item>eztv.ag</item>
        <item>eztv.tf</item>
        <item>eztv.yt</item>
    </string-array>

</resources>
