<PreferenceScreen xmlns:picker="http://schemas.android.com/apk/res/com.bukanir.android"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="keep_files"
        android:title="@string/pref_keep_files_title"
        android:summary="@string/pref_keep_files_description"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="encryption"
        android:title="@string/pref_encryption_title"
        android:summary="@string/pref_encryption_description"
        android:defaultValue="true" />

    <ListPreference
        android:key="download_rate"
        android:title="@string/pref_download_rate"
        android:defaultValue="-1"
        android:entries="@array/pref_rate_entries"
        android:entryValues="@array/pref_rate_values" />

    <ListPreference
        android:key="upload_rate"
        android:title="@string/pref_upload_rate"
        android:defaultValue="-1"
        android:entries="@array/pref_rate_entries"
        android:entryValues="@array/pref_rate_values" />

    <com.quietlycoding.android.picker.NumberPickerPreference
        android:key="listen_port"
        android:title="@string/pref_port_listen"
        picker:defaultValue="6881"
        picker:startRange="1024"
        picker:endRange="65535" />

</PreferenceScreen>
