<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="subtitles"
        android:title="@string/pref_subtitles_title"
        android:defaultValue="true" />

    <ListPreference
        android:key="sub_lang"
        android:dependency="subtitles"
        android:title="@string/pref_subtitles_lang"
        android:defaultValue="English"
        android:entries="@array/pref_lang_entries"
        android:entryValues="@array/pref_lang_entries" />

    <ListPreference
        android:key="sub_size"
        android:dependency="subtitles"
        android:title="@string/pref_subtitle_size_title"
        android:defaultValue="16"
        android:entries="@array/pref_subtitle_size_entries"
        android:entryValues="@array/pref_subtitle_size_values" />

</PreferenceScreen>
