<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dip">

    <ScrollView
        android:id="@+id/scroll"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:fillViewport="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/left_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/poster_width"
                    android:layout_height="@dimen/poster_height"
                    android:layout_gravity="left|top"
                    android:contentDescription="@string/poster_description"
                    android:adjustViewBounds="true" />

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/right_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/movie_title" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:textSize="@dimen/movie_info" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:textSize="@dimen/movie_info" />

                <TextView
                    android:id="@+id/info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_marginBottom="3dip"
                    android:textSize="@dimen/movie_info" />

                <TextView
                    android:id="@+id/tagline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_marginBottom="3dip"
                    android:textSize="@dimen/movie_tagline" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:textSize="@dimen/movie_info" />

                <TextView
                    android:id="@+id/cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:textSize="@dimen/movie_info" />
            </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/watch"
                    android:layout_width="@dimen/watch_button_width"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_material_dark"
                    android:text="@string/action_watch"
                    android:layout_alignParentLeft="true" />

                <Button
                    android:id="@+id/trailer"
                    android:layout_width="@dimen/trailer_button_width"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_material_dark"
                    android:text="@string/action_trailer"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/downloading"
                    android:layout_width="@dimen/watch_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dip"
                    android:visibility="invisible"
                    android:ellipsize="none"
                    android:textSize="@dimen/movie_progress"
                    android:maxLines="1" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/watch_button_width"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:id="@+id/progressBar" />

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/bottom_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:textSize="@dimen/movie_info" />

                <ImageView
                    android:id="@+id/tmdb_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tmdb"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/tmdb_alt" />

                <TextView
                    android:id="@+id/tmdb_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tmdb_desc"
                    android:textSize="@dimen/tmdb_text"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
